# ChangeLog for dev-ruby/ruby-cabin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ruby-cabin-0.6.1 (27 May 2014)

  27 May 2014; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +ruby-cabin-0.6.1.ebuild:
  New ebuild for ruby-cabin