@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 May 2014; Johann Schmitz <ercpe@gentoo.org> ruby-cabin-0.6.1.ebuild:
+  Updated ebuild for ruby-cabin
+
 *ruby-cabin-0.6.1 (27 May 2014)
 
   27 May 2014; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
